--- a/main.css
+++ b/main.css
@@ -1,84 +1,135 @@
-* {
+*
+{
     margin: 0;
     padding: 0px;
     box-sizing: border-box;
- }
- 
- @font-face {
+}
+
+@font-face
+{
     font-family: 'Poppins';
     src: url('Assets/Css/fonts/poppins.medium.ttf') format('truetype');
     /* You can also specify other font formats here */
- }
- 
- 
- :root {
+}
+
+
+
+:root
+{
+    --fill-color: rgba(159, 224, 182, 0.223);
     --body-background-color: #ffffff;
     --secondary-color: #ffffff;
     --primary-text: #000000;
     --header-background-color: #ffffff;
     --box-color: #ffffff;
- }
+    --btn-line-size: 1px;
+    --light-line-color-rgba: #818181;
+    --button-radius: 10px;
+    --image_radius: 10;
+    --primary-color: rgb(255, 0, 0);
+    --primary-text-color: #ffffff;
+    --primary_text-font-family: Poppins;
+    --primary_text-font-weight: 400;
+    --primary_text-font-size: 14px;
+    --primary_text-line-height: 1.7;
+    --primary_text-letter-spacing: 0;
+    --second_text-font-family: Poppins;
+    --second_text-font-weight: 400;
+    --second_text-font-size: 12px;
+    --second_text-line-height: 1.5;
+    --second_text-letter-spacing: 0;
+    --font_heading-font-family: Poppins;
+    --font_heading-font-weight: 700;
+    --h1_desktop-font-size: 28px;
+    --h2_desktop-font-size: 24px;
+    --h3_desktop-font-size: 21px;
+    --h4_desktop-font-size: 18px;
+    --h5_desktop-font-size: 16px;
+    --h6_desktop-font-size: 14px;
+    --h1_tablet-font-size: 28px;
+    --h2_tablet-font-size: 24px;
+    --h3_tablet-font-size: 21px;
+    --h4_tablet-font-size: 18px;
+    --h5_tablet-font-size: 16px;
+    --h6_tablet-font-size: 14px;
+    --h1_mobile-font-size: 28px;
+    --h2_mobile-font-size: 24px;
+    --h3_mobile-font-size: 21px;
+    --h4_mobile-font-size: 18px;
+    --h5_mobile-font-size: 18px;
+    --h6_mobile-font-size: 14px;
+
+}
 
 
 
- 
- 
- html {
+
+html
+{
     scroll-behavior: smooth;
- }
- 
- body {
+}
+
+body
+{
     background-color: var(--body-background-color);
     transition: all 0.3s;
     line-height: 1.5;
     font-family: 'Poppins';
     letter-spacing: 0.5px;
- }
- 
- p {
+}
+
+p
+{
     line-height: 1.6;
- }
- 
- /* ....................................... 
+}
+
+/* ....................................... 
  .............. Root css 
  ....................................... */
- a {
+a
+{
     text-decoration: none;
     color: var(--link-color);
- }
- 
- .title a,
- .title {
+}
+
+.title a,
+.title
+{
     color: var(--primary-text);
     font-size: 25px;
     line-height: 1.5;
- }
- 
- .thumbnail img {
+}
+
+.thumbnail img
+{
     width: 100%;
- }
- 
- /* .......................................
+}
+
+/* .......................................
   .............. Main Home Css
    ....................................... */
- .main-home {
+.main-home
+{
     margin: 10px 150px;
     padding: 0px 30px;
     display: flex;
     gap: 50px;
     flex: 1;
- }
- 
- .main-home-content {
+}
+
+.main-home-content
+{
     width: 65%;
- }
- 
- .main-home-sidebar {
+}
+
+.main-home-sidebar
+{
     width: 35%;
     margin-top: 20px;
- }
- 
- .main-home-content-post {
+}
+
+.main-home-content-post
+{
     background-color: var(--box-color);
     display: flex;
     flex-direction: column;
@@ -87,39 +138,46 @@
     margin: 20px 0px;
     border-radius: 10px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
- }
- 
- .main-home-content-post-thumbnail img {
+}
+
+.main-home-content-post-thumbnail img
+{
     object-fit: cover;
     object-position: center;
     border-radius: 5px;
     height: 350px;
- }
- 
- .sticky .main-home-content-post-thumbnail {
+}
+
+.sticky .main-home-content-post-thumbnail
+{
     position: relative;
- }
- 
- .sticky .main-home-content-post-thumbnail::before {
+}
+
+.sticky .main-home-content-post-thumbnail::before
+{
     content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 512 512'%3E%3Cpath fill='%23ffffff' d='M59.1 236.3h393.8s-19.7-98.5-98.5-98.5V59.1L413.5 0h-315l59.1 59.1v78.8c-78.8-.1-98.5 98.4-98.5 98.4M256 512l39.4-256h-78.8z'/%3E%3C/svg%3E");
-    font-size: 32px;
     position: absolute;
-    top: 0px;
-    right: 0px;
+    /* background-color: var(--primary-color); */
     background-color: var(--primary-color);
-    padding-top: 5px;
-    padding-right: 10px;
-    padding-left: 20px;
-    padding-bottom: 5px;
-    border-radius: 0px 0px 0px 50px;
+    width: 50px;
+    height: 50px;
+    padding-top: 8px;
+    border-radius: 0 0 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    right: 0;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
- }
- 
- .main-home-content-title {
+}
+
+.main-home-content-title
+{
     margin-bottom: 10px;
- }
- 
- .main-home-content-post-footer {
+}
+
+.main-home-content-post-footer
+{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -129,78 +187,143 @@
     height: 60px;
     background-color: rgba(159, 224, 182, 0.223);
     border-radius: 15px;
- }
- 
- .main-home-content-post-meta .author-avatar img {
+}
+
+.main-home-content-post-meta .author-avatar img
+{
     width: 50px;
     height: 50px;
     border-radius: 50px;
     object-fit: cover;
     object-position: center;
     border: dotted 1px var(--primary-color);
- }
- 
- .main-home-content-post-meta .author-and-date {
+}
+
+.main-home-content-post-meta .author-and-date
+{
     display: flex;
     gap: 10px;
     object-fit: cover;
     object-position: center;
- }
- 
- .main-home-content-post-meta .author-name-and-date {
+}
+
+.main-home-content-post-meta .author-name-and-date
+{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
- }
- 
+}
 
 
- @media (max-width:800px) {
-    .main-home {
-       margin: 10px 10px;
-       padding: 5px;
-       display: flex;
-       flex-direction: column;
+
+@media (max-width:800px)
+{
+    .main-home
+    {
+        margin: 10px 10px;
+        padding: 5px;
+        display: flex;
+        flex-direction: column;
     }
 
 
- 
-    .main-home-content {
-       width: 100%;
-    }
- 
-    .main-home-sidebar {
-       width: 100%;
-    }
- 
-    .main-home-content-post-thumbnail img {
-       border-radius: 5px;
-       height: 200px;
-    }
- }
- 
- @media (max-width:1300px) {
-    .main-home {
-       margin: 10px 10px;
-       padding: 5px;
-       display: flex;
+
+    .main-home-content
+    {
+        width: 100%;
     }
 
-    .site-header-one{
-      padding: 0px 10px !important;
+    .main-home-sidebar
+    {
+        width: 100%;
     }
- }
- 
- /* .......................................
+
+    .main-home-content-post-thumbnail img
+    {
+        border-radius: 5px;
+        height: 200px;
+    }
+}
+
+@media (max-width:1300px)
+{
+    .main-home
+    {
+        margin: 10px 10px;
+        padding: 5px;
+        display: flex;
+    }
+
+    .site-header-one
+    {
+        padding: 0px 10px !important;
+    }
+}
+
+
+
+.format-video .main-home-content-post-thumbnail
+{
+    position: relative;
+}
+
+.format-video .main-home-content-post-thumbnail::before
+{
+    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 24 24'%3E%3Cpath fill='white' d='m10 15l5.19-3L10 9zm11.56-7.83c.13.47.22 1.1.28 1.9c.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83c-.25.9-.83 1.48-1.73 1.73c-.47.13-1.33.22-2.65.28c-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44c-.9-.25-1.48-.83-1.73-1.73c-.13-.47-.22-1.1-.28-1.9c-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83c.25-.9.83-1.48 1.73-1.73c.47-.13 1.33-.22 2.65-.28c1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44c.9.25 1.48.83 1.73 1.73'/%3E%3C/svg%3E");
+    position: absolute;
+    /* background-color: var(--primary-color); */
+    background-color: var(--primary-color);
+    width: 50px;
+    height: 50px;
+    padding-top: 8px;
+    border-radius: 20px 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: 0;
+    bottom: 0;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+
+}
+
+
+.format-gallery .main-home-content-post-thumbnail
+{
+    position: relative;
+}
+
+.format-gallery .main-home-content-post-thumbnail::after
+{
+    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 24 24'%3E%3Cpath fill='white' d='M18.512 10.077c0 .739-.625 1.338-1.396 1.338c-.77 0-1.395-.6-1.395-1.338c0-.739.625-1.337 1.395-1.337s1.396.598 1.396 1.337'/%3E%3Cpath fill='white' fill-rule='evenodd' d='M18.036 5.532c-1.06-.136-2.414-.136-4.123-.136h-3.826c-1.71 0-3.064 0-4.123.136c-1.09.141-1.974.437-2.67 1.104c-.696.668-1.005 1.514-1.152 2.56C2 10.21 2 11.508 2 13.147v.1c0 1.639 0 2.937.142 3.953c.147 1.045.456 1.891 1.152 2.558c.696.668 1.58.964 2.67 1.104C7.024 21 8.378 21 10.087 21h3.826c1.71 0 3.064 0 4.123-.137c1.09-.14 1.974-.436 2.67-1.104c.696-.667 1.005-1.513 1.152-2.558c.142-1.016.142-2.314.142-3.953v-.1c0-1.64 0-2.937-.142-3.953c-.147-1.045-.456-1.891-1.152-2.559c-.696-.667-1.58-.963-2.67-1.104M6.15 6.858c-.936.12-1.475.347-1.87.724c-.393.378-.629.894-.755 1.791c-.1.72-.123 1.62-.128 2.796l.47-.395c1.125-.943 2.819-.889 3.875.123l3.99 3.825a1.2 1.2 0 0 0 1.491.124l.278-.187a3.606 3.606 0 0 1 4.34.25l2.407 2.078c.098-.264.173-.58.227-.965c.128-.916.13-2.124.13-3.824c0-1.7-.002-2.908-.13-3.825c-.126-.897-.362-1.413-.756-1.79c-.393-.378-.933-.604-1.869-.725c-.956-.123-2.216-.125-3.99-.125h-3.72c-1.774 0-3.034.002-3.99.125' clip-rule='evenodd'/%3E%3Cpath fill='white' d='M17.086 2.61c-.86-.11-1.954-.11-3.319-.11h-3.09c-1.364 0-2.459 0-3.319.11c-.89.115-1.632.358-2.221.92a2.9 2.9 0 0 0-.724 1.12c.504-.23 1.074-.366 1.714-.45c1.084-.14 2.47-.14 4.22-.14h3.914c1.75 0 3.135 0 4.22.14c.558.073 1.064.186 1.519.366a2.875 2.875 0 0 0-.692-1.035c-.589-.563-1.331-.806-2.222-.92'/%3E%3C/svg%3E");
+    position: absolute;
+    /* background-color: var(--primary-color); */
+    background-color: var(--primary-color);
+    width: 50px;
+    height: 50px;
+    padding-top: 8px;
+    border-radius: 20px 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: 0;
+    bottom: 0;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+
+}
+
+
+/* .......................................
   .............. Pagination Style 
   ....................................... */
- .pagination {
+.pagination
+{
     margin-top: 20px;
     /* Adjust the top margin as needed */
     text-align: center;
- }
- 
- .pagination .page-numbers {
+}
+
+.pagination .page-numbers
+{
     display: inline-block;
     margin: 0 8px;
     padding: 6px 18px;
@@ -212,67 +335,76 @@
     text-decoration: none;
     transition: transform 0.2s, box-shadow 0.2s;
     /* Adding transition for scale and box-shadow */
- }
- 
- .pagination .page-numbers:hover {
+}
+
+.pagination .page-numbers:hover
+{
     background-color: var(--primary-color);
     color: var(--secondary-color);
     transform: scale(1.1);
     /* Scale effect on hover */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     /* Box shadow on hover */
- }
- 
- .pagination .current {
+}
+
+.pagination .current
+{
     background-color: var(--primary-color);
     color: var(--primary-text-color);
     /* Text color of the current page button */
- }
- 
- /* .................................. 
+}
+
+/* .................................. 
  ................. Footer 
  .................................. */
- .footer-content {
+.footer-content
+{
     text-align: center;
     padding: 10px;
     background-color: rgba(190, 227, 255, 0.182);
- }
- 
- /* .......................................
+}
+
+/* .......................................
   .............. Single One Post 
   ....................................... */
- .single-one-post {
+.single-one-post
+{
     margin: 10px 150px;
     padding: 20px 30px;
     display: flex;
     gap: 50px;
- }
- 
- .single-one-post-content {
+}
+
+.single-one-post-content
+{
     width: 65%;
-    background-color:  var(--box-color);
+    background-color: var(--box-color);
     padding: 20px;
     border-radius: 10px;
     /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
      */
- }
- 
- .single-one-post-sidebar {
+}
+
+.single-one-post-sidebar
+{
     width: 35%;
- }
- 
- .single-one-post .post-thumbnail img {
+}
+
+.single-one-post .post-thumbnail img
+{
     height: 400px;
     border-radius: 5px;
     background-color: #232323;
     display: block;
- }
- 
- .post-thumbnail {
+}
+
+.post-thumbnail
+{
     position: relative;
- }
- 
- .single-one-post-thumbnail-inner {
+}
+
+.single-one-post-thumbnail-inner
+{
     position: absolute;
     display: flex;
     gap: 20px;
@@ -289,172 +421,199 @@
     /* Adjust padding as needed */
     background: linear-gradient(0deg, rgba(8, 6, 1, 0.6559873949579832) 21%, rgba(253, 187, 45, 0) 100%);
     border-radius: 5px;
- }
- 
- .single-one-post-thumbnail-inner .category a {
+}
+
+.single-one-post-thumbnail-inner .category a
+{
     background-color: var(--primary-color);
-    color: #f0f0f0;
+    color: var(--primary-text-color);
     padding: 2px 12px;
     border-radius: 10px;
     font-size: 13px;
     text-transform: uppercase;
- }
- 
- .single-one-post-thumbnail-inner .post-meta {
+}
+
+.single-one-post-thumbnail-inner .post-meta
+{
     display: flex;
     gap: 10px;
- }
- 
- .single-one-post-thumbnail-inner .post-meta .post-meta-inner {
+}
+
+.single-one-post-thumbnail-inner .post-meta .post-meta-inner
+{
     display: flex;
     flex-direction: column;
     justify-content: center;
- }
- 
- .single-one-post-thumbnail-inner .post-meta .author-avatar img {
+}
+
+.single-one-post-thumbnail-inner .post-meta .author-avatar img
+{
     position: relative;
     height: 50px;
     width: 50px;
     border-radius: 50px;
     object-fit: cover;
     object-position: center;
- }
- 
- .single-one-post-title {
+}
+
+.single-one-post-title
+{
     font-size: 25px;
     margin: 0;
     padding: 0;
     color: var(--secondary-color);
- }
- 
- .author-name,
- .post-date {
+}
+
+.author-name,
+.post-date
+{
     color: var(--secondary-color);
     margin-bottom: 0;
- }
- 
- .post-content {
+}
+
+.post-content
+{
     margin-top: 30px;
- }
- 
- .post-content p {
+}
+
+.post-content p
+{
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 19px;
- }
- 
- .has-drop-cap:first-of-type:first-letter {
+}
+
+.has-drop-cap:first-of-type:first-letter
+{
     font-size: 80px;
     /* Adjust the font size as needed */
     font-weight: bold;
- }
- 
- .comments-section {
-    margin-top: 30px;
- }
+}
 
- .bypostauthor .comment-user-name::before{
-   content: "Author - ";
-   color: var(--primary-color);
-   font-size: 12px;
- }
- 
- @media (max-width:800px) {
-    .single-one-post {
-       padding: 10px;
-       display: flex;
-       flex-direction: column;
-       margin: 0px;
+.comments-section
+{
+    margin-top: 30px;
+}
+
+.bypostauthor .comment-user-name::before
+{
+    content: "Author - ";
+    color: var(--primary-color);
+    font-size: 12px;
+}
+
+@media (max-width:800px)
+{
+    .single-one-post
+    {
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        margin: 0px;
     }
- 
-    .single-one-post-content {
-       width: 100%;
+
+    .single-one-post-content
+    {
+        width: 100%;
     }
- 
-    .single-one-post-sidebar {
-       width: 100%;
+
+    .single-one-post-sidebar
+    {
+        width: 100%;
     }
- 
-    .single-one-post .post-thumbnail img {
-       height: 300px;
+
+    .single-one-post .post-thumbnail img
+    {
+        height: 300px;
     }
- 
-    .single-one-post-title {
-       font-size: 20px;
-       line-height: 1.6;
+
+    .single-one-post-title
+    {
+        font-size: 20px;
+        line-height: 1.6;
     }
- 
-    .single-one-post-thumbnail-inner {
-       gap: 5px;
+
+    .single-one-post-thumbnail-inner
+    {
+        gap: 5px;
     }
- }
- 
- /* ................... 
+}
+
+/* ................... 
  .............Side Bar 
  .................. */
- #sidebar {
+#sidebar
+{
     position: sticky;
     z-index: 9;
     top: 100px;
- }
- 
- .widget {
+}
+
+.widget
+{
     margin-bottom: 20px;
     background-color: var(--box-color);
     padding: 20px;
     border-radius: 10px;
- }
- 
- /* ........................... 
+}
+
+/* ........................... 
  .............header-one 
  ........................... */
- .site-header-one {
+.site-header-one
+{
     padding: 0px 200px;
- }
+}
 
- .site-title{
-   margin: 0;
- }
- 
- .site-header-one .container {
+.site-title
+{
+    margin: 0;
+}
+
+.site-header-one .container
+{
     display: flex;
     color: var(--primary-text);
     align-items: center;
     justify-content: space-between;
     text-align: center;
- }
+}
 
- .site-branding-one img{
+.site-branding-one img
+{
 
-   width: 150px;
-   height: 60px;
+    width: 150px;
+    height: 60px;
 
- }
- 
- .menu-one {
+}
+
+.menu-one
+{
     display: flex;
     gap: 10px;
     list-style-type: none;
     color: var(--primary-text);
- }
- 
- #main-header {
+}
+
+#main-header
+{
     background-color: var(--header-background-color);
     position: sticky;
     top: 0;
     z-index: 999999;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
- }
+}
 
 
- @media (max-width:800px) {
-    .site-header-one {
+@media (max-width:800px)
+{
+    .site-header-one
+    {
         padding: 10px 10px;
-     }
+    }
 
-     .menu-one {
+    .menu-one
+    {
         display: none;
-     }
- }
-
-
+    }
+}
